--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -17,7 +17,7 @@ jobs:
          submodules: recursive
 
       - name: Install Python dependencies
-        run: python -m pip install aqt pyqt5-stubs mypy
+        run: python -m pip install aqt pyqt5-stubs mypy requests
 
       - name: Run mypy
         run: python -m mypy ./src/addon
