--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -22,6 +22,9 @@ jobs:
       
       - name: Install dependencies
         run: python -m pip install simplejson
+      
+      - name: Bundle dependencies
+        run: pip install --no-deps --target=./addon/libs -r requirements.txt
           
       - name: Run release/new_version.py
         run: python ./release/new_version.py ${{ github.event.inputs.version }}
