--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "src/addon/ankiaddonconfig"]
 	path = src/addon/ankiaddonconfig
 	url = https://github.com/BlueGreenMagick/ankiaddonconfig.git
+[submodule "src/addon/mega"]
+	path = src/addon/mega
+	url = git@github.com:odwyersoftware/mega.py.git
