--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -24,7 +24,7 @@ jobs:
         run: python -m pip install simplejson
       
       - name: Bundle dependencies
-        run: pip install --no-deps --target=./addon/libs -r requirements.txt
+        run: pip install --no-deps --target=./src/addon/libs -r requirements.txt
           
       - name: Run release/new_version.py
         run: python ./release/new_version.py ${{ github.event.inputs.version }}
