--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -16,8 +16,8 @@ jobs:
         with: 
          submodules: recursive
 
-      - name: Install Python dependencies
-        run: python -m pip install aqt pyqt5-stubs mypy types-requests
+      - name: Install Python libraries
+        run: python -m pip install aqt mypy pyqt5-stubs types-requests types-simplejson pycryptodome
 
       - name: Run mypy
         run: python -m mypy ./src/addon
