add 'fractions' python standard library

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,7 +1,7 @@
 [mypy]
 no_strict_optional = True
 disallow_untyped_defs = True
-exclude = src/addon/libs/
+exclude = (?:src/addon/libs/)|(?:src/addon/core/)
 
 [mypy-mega.*]
 ignore_missing_imports = True
