--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -33,7 +33,7 @@ jobs:
         uses: EndBug/add-and-commit@v7.1.1
         with:
           message: Bump Version to v${{ github.event.inputs.version }}
-          tags: ${{ github.event.inputs.version }}
+          tag: ${{ github.event.inputs.version }}
           
       - name: Create ankiaddon file
         run: cd src/addon ; zip -r ../../media_import_v${{ github.event.inputs.version }}.ankiaddon * ; cd ../../
