--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -15,6 +15,11 @@ jobs:
       - uses: actions/checkout@v2
         with: 
          submodules: recursive
+      
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.8
 
       - name: Install Python libraries
         run: python -m pip install aqt mypy pyqt5-stubs types-requests types-simplejson pycryptodome
