--- a/mypy.ini
+++ b/mypy.ini
@@ -1,7 +1,7 @@
 [mypy]
 no_strict_optional = True
 disallow_untyped_defs = True
-exclude = (?:src/addon/libs/)|(?:src/addon/core/)|(?:src/addon/pycryptodome/)
+exclude = (?:src/media_import/libs/)|(?:src/media_import/core/)|(?:src/media_import/pycryptodome/)
 
 [mypy-mega.*]
 ignore_missing_imports = True
