fix typo obsfucate

--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -36,7 +36,7 @@ jobs:
           tag: ${{ github.event.inputs.version }}
 
       - name: Bundle google api key
-        run: python ./release/api_obsfucate.py "${{ secrets.GOOGLE_API_KEY }}"
+        run: python ./release/api_obfuscate.py "${{ secrets.GOOGLE_API_KEY }}"
 
       - name: Create ankiaddon file
         run: cd src ; zip -r ../media_import_v${{ github.event.inputs.version }}.ankiaddon * ; cd ../
