--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,5 @@ python-utils==2.5.6
 tenacity==5.1.5
 testresources==2.0.1
 #urllib3==1.26.6
+pytest
+git+https://github.com/andrewsanchez/pytest-anki.git@anki-2.1.54-qt5
