download zip to temp folder, poll every 0.5s

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ meta.json
 google_api_key.py
 
 src/media_import/libs/
+src/media_import/temp/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
