--- a/mypy.ini
+++ b/mypy.ini
@@ -1,4 +1,4 @@
 [mypy]
 no_strict_optional = True
 disallow_untyped_defs = True
-exclude = (?:src/media_import/libs/)|(?:src/media_import/core/)|(?:src/media_import/pycryptodome/)
+exclude = (?:src/media_import/libs/)
