--- a/mypy.ini
+++ b/mypy.ini
@@ -1,4 +1,5 @@
 [mypy]
+files = src/media_import, tests
 no_strict_optional = True
 disallow_untyped_defs = True
 exclude = (?:src/media_import/libs/)
