--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -25,4 +25,4 @@ jobs:
         run: python -m pip install -r dev-requirements.txt
 
       - name: Run mypy
-        run: python -m mypy ./src
+        run: python -m mypy
