--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -23,6 +23,9 @@ jobs:
 
       - name: Install Python libraries
         run: python -m pip install -r dev-requirements.txt
+          
+      - name: Run the build script
+        run: python scripts/build.py
 
       - name: Run mypy
         run: python -m mypy
