--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -19,10 +19,13 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: 3.9
 
       - name: Install Python libraries
-        run: python -m pip install aqt mypy pyqt5-stubs types-requests types-simplejson pycryptodome
+        run: python -m pip install -r dev-requirements.txt
+          
+      - name: Run the build script
+        run: python scripts/build.py
 
       - name: Run mypy
-        run: python -m mypy ./src
+        run: python -m mypy
